samples/resourceLeak/out.txt
samples\resourceLeak\bad.c:8:5: error: Resource leak: a [resourceLeak]
    return 0;
    ^
